# macro_server

./: LICENSE  README.md
gui/: package-lock.json  package.json
gui/src/: index.js
gui/src/view/: App.tsx  GridItem.tsx  TileData.tsx  TilesView.tsx  keyboard_listener.tsx  modal_popup.tsx  settings.tsx
gui/src/view/style/: App.css  popup.css  tile.css
macro_server/: Cargo.toml
macro_server/src/: keybd_util.rs  macro_data.rs  macro_server.rs  main.rs
