[package]
name = "macro_server"
version = "0.1.0"
authors = ["Liam Oliver-Mallory <liam.olivermallory@gmail.com>"]
edition = "2018"

[dependencies]
winapi = {version = "0.3.6", features = ["winuser"]}
num = "0.2.0"
hyper = "0.12.25"
futures = "0.1.17"
tokio = "0.1.17"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
# macro execution library (supports windows and linux)
inputbot = "0.4.0"
serde = {versino="1.0.89", features=["derive"]}
serde_json = "1.0.39"